; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/handwired/datahand/keymaps/default/extr_keymap.c_toggle_numlock.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/handwired/datahand/keymaps/default/extr_keymap.c_toggle_numlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@numlock_enabled = common dso_local global i32 0, align 4
@LED_NUM_LOCK = common dso_local global i32 0, align 4
@NAS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @toggle_numlock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @toggle_numlock() #0 {
  %1 = load i32, i32* @numlock_enabled, align 4
  %2 = icmp ne i32 %1, 0
  %3 = xor i1 %2, true
  %4 = zext i1 %3 to i32
  store i32 %4, i32* @numlock_enabled, align 4
  %5 = load i32, i32* @numlock_enabled, align 4
  %6 = load i32, i32* @LED_NUM_LOCK, align 4
  %7 = call i32 @lock_led_set(i32 %5, i32 %6)
  %8 = load i32, i32* @NAS, align 4
  %9 = call i64 @layer_state_is(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %0
  %12 = call i32 @set_nas(i32 1)
  br label %13

13:                                               ; preds = %11, %0
  ret void
}

declare dso_local i32 @lock_led_set(i32, i32) #1

declare dso_local i64 @layer_state_is(i32) #1

declare dso_local i32 @set_nas(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
